fix: courses for groups: upper row elements alignment

--- a/src/app/components/courses-for-groups/added-courses/added-courses.component.scss
+++ b/src/app/components/courses-for-groups/added-courses/added-courses.component.scss
@@ -7,6 +7,7 @@
 .form-control {
   height: 1.5rem;
   font-size: 12px;
+  padding: 0 6px;
 }
 
 .btn-outline-secondary {
