--- a/src/app/components/courses-for-groups/courses-for-groups.component.scss
+++ b/src/app/components/courses-for-groups/courses-for-groups.component.scss
@@ -14,7 +14,7 @@
 }
 
 .hours-per-credit{
-  max-width: 10%;
+  max-width: 13%;
   margin-right: 1.2%;
 }
 
@@ -22,7 +22,7 @@
   padding-right: 0;
   margin-left: 0;
   padding-left: 0;
-  max-width: 6%;
+  max-width: 9%;
 }
 
 .col-2 {
@@ -32,12 +32,16 @@
   margin: 0;
 }
 
+.col-4 {
+  padding: 0px;
+}
+
 .label{
   margin-left: 20px;
 }
 
 .group-label{
-  max-width: 4.5%;
+  max-width: 6%;
 }
 
 .mr-2[_ngcontent-c2], .mx-2[_ngcontent-c2]{
